--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
+<h2>This is a Heading</h2>
+<p>This is a nother paragraph.</p>
+
+
 </body>
 </html>
